fix get products
